# roguelike

./: .gitignore  Cargo.toml  README.md
map_assets/: level_0.ldtk
map_assets/map/entrances/: 0.ldtk
map_assets/map/entrances/down/: 0.ldtk
map_assets/map/entrances/left/: 0.ldtk
map_assets/map/exits/down/: 0.ldtk
map_assets/map/exits/left/: 0.ldtk
map_assets/map/exits/right/: 0.ldtk
map_assets/map/left-down/: 0.ldtk
map_assets/map/left-right/: 0.ldtk
map_assets/map/right-down/: 0.ldtk
map_assets/map/right-left/: 0.ldtk
map_assets/map/up-down/: 0.ldtk
map_assets/map/up-left/: 0.ldtk
map_assets/map/up-right/: 0.ldtk
src/: main.rs
src/animations/: mod.rs  player_animations.rs  sprite_animation.rs
src/entities/: animations.rs  block.rs  blocks.rs  collision.rs  entity.rs  health.rs  hit_box.rs  mod.rs  player.rs
src/entities/animations/: player_animations.rs  sprite_animation.rs
src/map/: generator.rs  ldtk_setup.rs  mod.rs
