[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["wayland"] }
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_ecs_ldtk = { version = "0.6.0", features = ["atlas"] }
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bevy_rapier2d = "0.21.0"
leafwing-input-manager = "0.9.1"
rand = "0.8.5"
